// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render array adds element to end correctly 1`] = `
"<div>first</div>
<div>second</div>
<div>third</div>
<div>added</div>"
`;

exports[`render array adds element to front correctly 1`] = `
"<div>added</div>
<div>first</div>
<div>second</div>
<div>third</div>"
`;

exports[`render array adds element to middle correctly 1`] = `
"<div>first</div>
<div>added</div>
<div>second</div>
<div>third</div>"
`;

exports[`render array removes element from end correctly 1`] = `
"<div>first</div>
<div>second</div>"
`;

exports[`render array removes element from front correctly 1`] = `
"<div>second</div>
<div>third</div>"
`;

exports[`render array removes element from middle correctly 1`] = `
"<div>first</div>
<div>third</div>"
`;

exports[`render array renders all elements in array 1`] = `
"<div>first</div>
<div>second</div>
<div>third</div>"
`;

exports[`render basic renders basic dom 1`] = `"<div>Hello World!</div>"`;

exports[`render basic renders element replaced string 1`] = `"<div>replace</div>"`;

exports[`render basic renders number 1`] = `"1000"`;

exports[`render basic renders string 1`] = `"string"`;

exports[`render props removes class prop 1`] = `"<div prop=\\"value\\" bool=\\"true\\">elem</div>"`;

exports[`render props removes event handler 1`] = `"<div class=\\"class\\" prop=\\"value\\" bool=\\"true\\">elem</div>"`;

exports[`render props removes false boolean prop 1`] = `"<div class=\\"class\\" prop=\\"value\\">elem</div>"`;

exports[`render props removes prop 1`] = `"<div class=\\"class\\" bool=\\"true\\">elem</div>"`;

exports[`render props renders added prop 1`] = `"<div class=\\"class\\" prop=\\"value\\" bool=\\"true\\" added=\\"new\\">elem</div>"`;

exports[`render props renders entire new props 1`] = `"<div class=\\"class\\" prop=\\"value\\" bool=\\"true\\">elem</div>"`;

exports[`render props renders props 1`] = `"<div class=\\"class\\" prop=\\"value\\" bool=\\"true\\">elem</div>"`;

exports[`render props renders updated prop 1`] = `"<div class=\\"class\\" prop=\\"updated\\" bool=\\"true\\">elem</div>"`;

exports[`render props replaces event handler 1`] = `"<div class=\\"class\\" prop=\\"value\\" bool=\\"true\\">elem</div>"`;
